--- a/js/category-form/template.html
+++ b/js/category-form/template.html
@@ -26,6 +26,7 @@
   <div class="form-group row">
     <div class="col-xs-12">
       <button type="button" class="btn btn-secondary" v-on="click: cancel">Cancel</button>
+      <button type="button" class="btn btn-danger" v-on="click: remove" v-if="category.id">Remove</button>
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </div>
