--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <title>Budget app</title>
-  <!-- <link rel="stylesheet" href="./build/css/all.min.css" type="text/css" media="all" /> -->
-  <link rel="stylesheet" href="./build/css/all.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="./build/css/all.min.css" type="text/css" media="all" />
+  <!-- <link rel="stylesheet" href="./build/css/all.css" type="text/css" media="all" /> -->
 </head>
 <body>
   <div id="budget-app"></div>
 
-  <!-- <script src="./build/js/all.min.js" type="text/javascript" charset="utf-8"></script> -->
-  <script src="./build/js/all.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./build/js/all.min.js" type="text/javascript" charset="utf-8"></script>
+  <!-- <script src="./build/js/all.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
