--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="./build/img/icon.jpg" />
 
-  <title>Budget app</title>
+  <title>Budget Tracker</title>
   <!-- <link rel="stylesheet" href="./build/css/all.min.css?v=1" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="./build/css/all.css" type="text/css" media="all" />
 </head>
