Confirm the reset of transactions
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/home/template.html
+++ b/js/home/template.html
@@ -42,7 +42,7 @@
         <button
           type="button"
           class="btn btn-danger btn-lg btn-block"
-          v-on="click: $root.$.transactions.removeAll"
+          v-on="click: reset"
         >
           Reset transactions
         </button>
