Add home button to navbar
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/navbar/template.html
+++ b/js/navbar/template.html
@@ -1,4 +1,8 @@
-<header class="navbar navbar-fixed-top navbar-dark bg-primary text-center">
+<header class="navbar navbar-fixed-top navbar-dark bg-primary text-center clearfix">
+  <a v-link="'/'" class="navbar-toggler pull-left" type="button">
+    &#127968;
+  </a>
+
   <div class="navbar-nav">
     <strong class="nav-link active">Cash Money</strong>
   </div>
