TransactionList route and tweaks
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/category-form/template.html
+++ b/js/category-form/template.html
@@ -33,6 +33,5 @@
 </form>
 
 <transaction-list
-  show-title
-  v-if="category.id"
+  transactions="{{$root.$.transactions.byCategoryId[category.id]}}"
 ></transaction-list>
