--- a/js/home/template.html
+++ b/js/home/template.html
@@ -40,6 +40,12 @@
       </div>
 
       <div class="form-group">
+        <a type="button" class="btn btn-secondary btn-lg btn-block" v-link="'/transactions'">
+          All transactions
+        </a>
+      </div>
+
+      <div class="form-group">
         <button
           type="button"
           class="btn btn-danger btn-lg btn-block"
