Hide transaction list on form if new
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/category-form/template.html
+++ b/js/category-form/template.html
@@ -33,6 +33,7 @@
 </form>
 
 <transaction-list
+  v-if="category.id"
   transactions="{{$root.$.transactions.byCategoryId[category.id]}}"
   hide-category
 ></transaction-list>
