Remove assets versions
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="apple-touch-icon" href="./build/img/icon.jpg" />
 
   <title>Budget Tracker</title>
-  <link rel="stylesheet" href="./build/css/all.min.css?v=3" type="text/css" media="all" />
+  <link rel="stylesheet" href="./build/css/all.min.css" type="text/css" media="all" />
   <!-- <link rel="stylesheet" href="./build/css/all.css" type="text/css" media="all" /> -->
 </head>
 <body>
   <div id="budget-app"></div>
 
-  <script src="./build/js/all.min.js?v=11" type="text/javascript" charset="utf-8"></script>
+  <script src="./build/js/all.min.js" type="text/javascript" charset="utf-8"></script>
   <!-- <script src="./build/js/all.js" type="text/javascript" charset="utf-8"></script> -->
 </body>
 </html>
