Fix Transactions title hide/show
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/transaction-list/template.html
+++ b/js/transaction-list/template.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row" v-if="showTitle">
-    <div class="col-xs-12" v-if="!hideTitle">
+  <div class="row" v-if="!hideTitle">
+    <div class="col-xs-12">
       <h3>Transactions</h3>
     </div>
   </div>
