--- a/js/category-list/template.html
+++ b/js/category-list/template.html
@@ -4,7 +4,7 @@
       class="list-group-item"
       type="button"
       v-repeat="$root.$.categories.withTotals | orderBy 'name'"
-      href="#!/categories/{{slug}}"
+      href="#!/categories/{{id}}"
     >
       {{name}}
       <span
