--- a/js/category-list/template.html
+++ b/js/category-list/template.html
@@ -3,7 +3,7 @@
     <a
       class="list-group-item"
       type="button"
-      v-repeat="$root.$.categories.withTotals | orderBy 'name'"
+      v-repeat="$root.$.categories.withRemaining | orderBy 'name'"
       href="#!/categories/{{id}}"
     >
       {{name}}
@@ -13,7 +13,7 @@
           label-success: total > 0,
           label-danger: total <= 0
         "
-      >{{total | currency}}</span>
+      >{{remaining | currency}}</span>
       <span
         class="label label-default label-pill pull-right"
       >{{$root.$.transactions.byCategoryId[id].length}}</span>
