Use remaining to color code category list
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/category-list/template.html
+++ b/js/category-list/template.html
@@ -10,8 +10,8 @@
       <span
         class="label label-pill pull-right"
         v-class="
-          label-success: total > 0,
-          label-danger: total <= 0
+          label-success: remaining > 0,
+          label-danger: remaining == 0
         "
       >{{remaining | currency}}</span>
       <span
