Only show real total if something is in the red
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/category-list/template.html
+++ b/js/category-list/template.html
@@ -18,6 +18,7 @@
             label-success: total > 0,
             label-danger: total <= 0
           "
+          v-show="!!$root.$.categories.totalDeficit"
         >{{total | currency}}</span>
         <span
           class="label label-pill"
