Less dependency on categories.sorted
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/js/transaction-form/template.html
+++ b/js/transaction-form/template.html
@@ -5,7 +5,7 @@
       <select
         class="form-control"
         v-model="transaction.categoryId"
-        options="$root.$.categories.selectOptions"
+        options="$root.$.categories.selectOptions | orderBy 'text'"
       ></select>
     </div>
   </div>
