--- a/js/category-form/template.html
+++ b/js/category-form/template.html
@@ -18,7 +18,7 @@
         min="0"
         step="0.01"
         class="form-control"
-        placeholder="Quota"
+        placeholder="$0.00"
         v-model="category.quota"
       />
     </div>
