Got it working with meteor
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="./build/img/icon.jpg" />
-
+  <link rel="apple-touch-icon" href="./client/img/icon.jpg" />
   <title>Budget Tracker</title>
-  <!-- <link rel="stylesheet" href="./build/css/all.min.css?v=1" type="text/css" media="all" /> -->
-  <link rel="stylesheet" href="./build/css/all.css" type="text/css" media="all" />
+
+  <link rel="stylesheet" href="/css/all.css" type="text/css" media="all" />
 </head>
+
 <body>
   <div id="budget-app"></div>
 
-  <!-- <script src="./build/js/all.min.js?v=1" type="text/javascript" charset="utf-8"></script> -->
-  <script src="./build/js/all.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/all.js" type="text/javascript" charset="utf-8"></script>
 </body>
-</html>
