--- a/.client/js/category-form/template.html
+++ b/.client/js/category-form/template.html
@@ -26,14 +26,14 @@
   <div class="form-group row">
     <div class="col-xs-12">
       <button type="button" class="btn btn-secondary" v-on="click: cancel">Cancel</button>
-      <button type="button" class="btn btn-danger" v-on="click: remove" v-if="category.id">Remove</button>
+      <button type="button" class="btn btn-danger" v-on="click: remove" v-if="category._id">Remove</button>
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </div>
 </form>
 
 <transaction-list
-  v-if="category.id"
-  transactions="{{$root.$.transactions.byCategoryId[category.id]}}"
+  v-if="category._id || $root.$.transactions.byCategoryId[category._id]"
+  transactions="{{$root.$.transactions.byCategoryId[category._id]}}"
   hide-category
 ></transaction-list>
