--- a/.client/js/category-list/template.html
+++ b/.client/js/category-list/template.html
@@ -3,30 +3,21 @@
     <a
       class="list-group-item"
       type="button"
-      v-repeat="$root.$.categories.withRemaining | orderBy 'name'"
-      href="#!/categories/{{id}}"
+      v-repeat="category in $root.$.categories.items | orderBy 'name'"
+      href="#!/categories/{{category._id}}"
     >
       <span
         class="label label-default label-pill"
-      >{{$root.$.transactions.byCategoryId[id].length}}</span>
-      {{name}}
+      >{{$root.$.transactions.byCategoryId[category._id].length}}</span>
+      {{category.name}}
       <div class="pull-right">
         <span
           class="label label-pill"
-          style="opacity: 0.8"
           v-class="
-            label-success: total > 0,
-            label-danger: total <= 0
+            label-success: $root.$.transactions.totalsByCategoryId[category._id] > 0,
+            label-danger: $root.$.transactions.totalsByCategoryId[category._id] <= 0
           "
-          v-show="!!$root.$.categories.totalDeficit"
-        >{{total | currency}}</span>
-        <span
-          class="label label-pill"
-          v-class="
-            label-success: remaining > 0,
-            label-danger: remaining == 0
-          "
-        >{{remaining | currency}}</span>
+        >{{$root.$.transactions.totalsByCategoryId[category._id] | currency}}</span>
       </div>
     </a>
   </div>
