--- a/.client/js/home/template.html
+++ b/.client/js/home/template.html
@@ -54,6 +54,13 @@
           Reset transactions
         </button>
       </div>
+
+      <div class="form-group">
+        <label class="col-sm-2 form-control-label">Share me</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" v-model="$root.sessionId" />
+        </div>
+      </div>
     </div>
   </div>
 </div>
