--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <link rel="apple-touch-icon" href="./client/img/icon.jpg" />
+  <link rel="apple-touch-icon" href="/img/icon.jpg" />
   <title>Budget Tracker</title>
 
   <link rel="stylesheet" href="/css/all.min.css" type="text/css" media="all" />
