--- a/.client/js/transaction-form/template.html
+++ b/.client/js/transaction-form/template.html
@@ -34,6 +34,26 @@
     </div>
   </div>
   <div class="form-group row">
+    <label class="col-sm-2 form-control-label">Image</label>
+    <div class="col-sm-10">
+      <button
+        type="button"
+        v-on="click: clearImage"
+        class="btn btn-sm btn-danger"
+        v-show="transaction.image"
+      >
+        Clear image
+      </button>
+      <input
+        type="file"
+        accept="image/*"
+        capture="camera"
+        v-el='imageInput'
+        v-on="change: onImageChange"
+      />
+    </div>
+  </div>
+  <div class="form-group row">
     <div class="col-xs-12">
       <button type="button" class="btn btn-secondary" v-on="click: cancel">Cancel</button>
       <button type="submit" class="btn btn-primary">Save</button>
