Form-control class for file upload
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/.client/js/transaction-form/template.html
+++ b/.client/js/transaction-form/template.html
@@ -46,6 +46,7 @@
       </button>
       <input
         type="file"
+        class="form-control"
         accept="image/*"
         capture="camera"
         v-el='imageInput'
