--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="apple-touch-icon" href="/img/icon.jpg" />
   <title>Budget Tracker</title>
 
-  <link rel="stylesheet" href="/css/all.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="/css/all.min.css" type="text/css" media="all" />
 </head>
 
 <body>
   <div id="budget-app"></div>
 
-  <script src="/js/all.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/all.min.js" type="text/javascript" charset="utf-8"></script>
 </body>
