--- a/.client/js/transaction-form/template.html
+++ b/.client/js/transaction-form/template.html
@@ -47,7 +47,7 @@
       <input
         type="file"
         class="form-control"
-        accept="image/*"
+        accept="image/jpeg"
         capture="camera"
         v-el='imageInput'
         v-on="change: onImageChange"
