--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <body>
   <div id="budget-app"></div>
 
-  <script src="/js/all.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/all.js" type="text/javascript" charset="utf-8"></script>
 </body>
