--- a/.client/js/transaction-form/template.html
+++ b/.client/js/transaction-form/template.html
@@ -54,6 +54,16 @@
       />
     </div>
   </div>
+  <div
+    class="form-group row"
+    v-show="imagePreview"
+  >
+    <img
+      class="img-responsive"
+      v-el="imagePreview"
+      v-attr="src: imagePreview"
+    />
+  </div>
   <div class="form-group row">
     <div class="col-xs-12">
       <button type="button" class="btn btn-secondary" v-on="click: cancel">Cancel</button>
